# base-fastapi-app

./: .env  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
application/: main.py
application/backend/api/v1/: __init__.py
application/backend/api/v1/views/: contracts.py  events.py  users.py
application/core/: enums.py  settings.py
application/database/: __init__.py  db_helper.py
application/database/crud/: __init__.py  contracts.py  events.py  users.py
application/database/dependencies/: __init__.py  contracts.py  events.py  users.py
application/database/models/: __init__.py  base.py  contract.py  event.py  user.py
application/database/schemas/: __init__.py  contract.py  event.py  users.py
core/: loggers.py  roles.py  settings.py
database/: db_helper.py
database/models/: base.py  profile.py  user.py
database/schemas/: profile.py  user.py
